<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    android:paddingTop="10dp"
    android:paddingBottom="25dp"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:gravity="center_horizontal">

    <TextView
        android:id="@+id/Hero"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/Hero_name"
        android:textSize="20sp"
        android:textColor="@color/button_text_color"/>

    <TextView
        android:id="@+id/tvEarlyGame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/Early_Game"
        android:textSize="14sp"
        android:textColor="@color/colorPrimaryDark"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorPrimaryDark" />

    <TextView
        android:id="@+id/tvMidGame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/Mid_Game"
        android:textSize="14sp"
        android:textColor="@color/colorPrimaryDark"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorPrimaryDark" />

    <TextView
        android:id="@+id/tvLateGame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/Late_Game"
        android:textSize="14sp"
        android:textColor="@color/colorPrimaryDark"/>

</LinearLayout>