<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/sign_up_dialog_button"
        android:orientation="vertical"
        android:padding="1dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/alert_dialog_header_background"
            android:gravity="center_vertical"
            android:padding="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:fontFamily="@font/open_sans_semibold"
                android:text="@string/Notice"
                android:textAlignment="center"
                android:textColor="@color/Notice_header_text"
                android:textSize="18sp"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/close_x_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true">

                <ImageView
                    android:id="@+id/x_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/ic_x_close" />

            </LinearLayout>

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/sign_up_dialog_button" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/alert_dialog_background"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingLeft="30dp"
            android:paddingTop="20dp"
            android:paddingRight="30dp"
            android:paddingBottom="15dp">

            <TextView
                android:id="@+id/textview_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/Notice_body_1"
                android:textAlignment="center"
                android:textColor="@color/Notice_body_text"
                android:textSize="18sp"
                android:layout_marginTop="5dp"/>

            <TextView
                android:id="@+id/textview_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/Notice_body_2"
                android:textAlignment="center"
                android:textColor="@color/Notice_body_text"
                android:textSize="16sp"
                android:layout_marginTop="3dp"/>

            <TextView
                android:id="@+id/textview_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/Notice_body_3"
                android:textAlignment="center"
                android:textColor="@color/Notice_body_text"
                android:textSize="16sp"
                android:layout_marginTop="1dp"/>

            <Button
                android:id="@+id/btOkay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="26dp"
                android:background="@drawable/button2_background"
                android:paddingLeft="40dp"
                android:paddingRight="40dp"
                android:text="@string/Okay"
                android:textAllCaps="false"
                android:textColor="@color/button_text_color" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>